--- a/MyApplication/application/src/main/res/drawable/radio_bt_selector.xml
+++ b/MyApplication/application/src/main/res/drawable/radio_bt_selector.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 默认按钮样式 -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_checked="true">
+
+        <shape android:shape="rectangle">
+            <corners android:radius="@dimen/button_circle_size" />
+            <solid android:color="@color/common_accent_color" />
+        </shape>
+    </item>
+    <item android:state_checked="false">
+        <shape android:shape="rectangle">
+            <corners android:radius="@dimen/button_circle_size" />
+            <solid android:color="@color/common_disable_color" />
+        </shape>
+    </item>
+
 
     <!-- 禁用状态 -->
     <item android:state_enabled="false">
@@ -33,7 +46,5 @@
             <solid android:color="@color/common_accent_color" />
         </shape>
     </item>
-
-
 
 </selector>
