实现了添加账单后，其他Fragment自动刷新列表和修改总计金额

--- a/MyApplication/application/src/main/res/drawable/vector_drawable_financing.xml
+++ b/MyApplication/application/src/main/res/drawable/vector_drawable_financing.xml
@@ -1,48 +1,11 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="48"
-    android:viewportHeight="48">
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp"
+    android:height="24dp" android:viewportWidth="48" android:viewportHeight="48">
     <path
-        android:fillColor="#b1a8c5"
-        android:pathData="M15.0002,14.3848C19.1256,16.0002 24.0085,16.0002 24.0085,16.0002C24.0085,16.0002 28.8802,16.0002 33.0002,14.3848C37.502,19.6386 40.6566,26.5646 42.7299,32.3977C44.8289,38.3029 40.2008,44.0002 33.9336,44.0002H14.0199C7.7684,44.0002 3.1461,38.329 5.2345,32.4366C7.2981,26.614 10.455,19.6856 15.0002,14.3848Z"
-        android:strokeWidth="4"
-        android:strokeColor="#b1a8c5"
-        android:strokeLineJoin="bevel" />
+        android:pathData="M24,44C35.0457,44 44,35.0457 44,24C44,12.9543 35.0457,4 24,4C12.9543,4 4,12.9543 4,24C4,35.0457 12.9543,44 24,44Z"
+        android:strokeLineJoin="bevel" android:strokeWidth="3" android:fillColor="#00000000"
+        android:strokeColor="#b1a8c5" />
     <path
-        android:fillColor="#00000000"
-        android:pathData="M18,28H30"
-        android:strokeWidth="4"
-        android:strokeColor="#FFF"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M18,34H30"
-        android:strokeWidth="4"
-        android:strokeColor="#FFF"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M24.0088,28V38"
-        android:strokeWidth="4"
-        android:strokeColor="#FFF"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M30,22L24,28L18,22"
-        android:strokeWidth="4"
-        android:strokeColor="#FFF"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
-    <path
-        android:fillColor="#00000000"
-        android:fillType="evenOdd"
-        android:pathData="M24,16C31.1797,16 37,13.3137 37,10C37,6.6863 31.1797,4 24,4C16.8203,4 11,6.6863 11,10C11,13.3137 16.8203,16 24,16Z"
-        android:strokeWidth="4"
-        android:strokeColor="#b1a8c5"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
+        android:pathData="M25.4142,18.3429L29.6569,22.5856A2,2 0,0 1,29.6569 25.414L25.4142,29.6566A2,2 0,0 1,22.5858 29.6566L18.3431,25.414A2,2 102.3512,0 1,18.3431 22.5856L22.5858,18.3429A2,2 133.3168,0 1,25.4142 18.3429z"
+        android:strokeLineJoin="bevel" android:strokeWidth="3" android:fillColor="#00000000"
+        android:strokeColor="#b1a8c5" />
 </vector>
