--- a/MyApplication/application/src/main/res/drawable/vector_drawable_red_envelope.xml
+++ b/MyApplication/application/src/main/res/drawable/vector_drawable_red_envelope.xml
@@ -1,48 +1,17 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="48"
-    android:viewportHeight="48">
-    <path
-        android:fillColor="#b1a8c5"
-        android:pathData="M39,4H9V10L24,14L39,10V4Z"
-        android:strokeWidth="4"
-        android:strokeColor="#b1a8c5"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M39,17V44H9V17"
-        android:strokeWidth="4"
-        android:strokeColor="#b1a8c5"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,19L24,25L29,19"
-        android:strokeWidth="4"
-        android:strokeColor="#b1a8c5"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M18,31H30"
-        android:strokeWidth="4"
-        android:strokeColor="#b1a8c5"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M18,25H30"
-        android:strokeWidth="4"
-        android:strokeColor="#b1a8c5"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M24,25V37"
-        android:strokeWidth="4"
-        android:strokeColor="#b1a8c5"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp"
+    android:height="24dp" android:viewportWidth="48" android:viewportHeight="48">
+    <path android:pathData="M39,4H9V10L24,14L39,10V4Z" android:strokeLineJoin="bevel"
+        android:strokeWidth="3" android:fillColor="#00000000" android:strokeColor="#b1a8c5"
+        android:strokeLineCap="round" />
+    <path android:pathData="M39,17V44H9V17" android:strokeLineJoin="bevel" android:strokeWidth="3"
+        android:fillColor="#00000000" android:strokeColor="#b1a8c5" android:strokeLineCap="round" />
+    <path android:pathData="M19,19L24,25L29,19" android:strokeLineJoin="bevel"
+        android:strokeWidth="3" android:fillColor="#00000000" android:strokeColor="#b1a8c5"
+        android:strokeLineCap="round" />
+    <path android:pathData="M18,31H30" android:strokeLineJoin="bevel" android:strokeWidth="3"
+        android:fillColor="#00000000" android:strokeColor="#b1a8c5" android:strokeLineCap="round" />
+    <path android:pathData="M18,25H30" android:strokeLineJoin="bevel" android:strokeWidth="3"
+        android:fillColor="#00000000" android:strokeColor="#b1a8c5" android:strokeLineCap="round" />
+    <path android:pathData="M24,25V37" android:strokeLineJoin="bevel" android:strokeWidth="3"
+        android:fillColor="#00000000" android:strokeColor="#b1a8c5" android:strokeLineCap="round" />
 </vector>
