--- a/MyApplication/application/src/main/res/layout/result_popup_window_layout.xml
+++ b/MyApplication/application/src/main/res/layout/result_popup_window_layout.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="300dp"
-    android:layout_height="30dp"
-    android:background="@mipmap/back"
+    android:layout_height="35dp"
+    android:background="@drawable/rounded_rectangle"
     android:gravity="start|top"
 
     android:paddingTop="5dp"
@@ -13,6 +13,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="200*4-52.1=747.19"
+    android:textSize="18sp"
     android:textColor="@color/black70"
 />
 </LinearLayout>
