--- a/MyApplication/application/src/main/res/drawable/bill_type_selector.xml
+++ b/MyApplication/application/src/main/res/drawable/bill_type_selector.xml
@@ -1,9 +1,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
-        <scale
-            android:drawable="@drawable/drawable_shop"
-            android:scaleWidth="1.2"
-            android:scaleHeight="1.2" />
+        <scale android:drawable="@drawable/drawable_shop" android:scaleWidth="1.2" android:scaleHeight="1.2" />
     </item>
     <item android:state_checked="false">
         <bitmap android:src="@drawable/drawable_shopping" />
