--- a/MyApplication/application/src/main/res/drawable/radio_bt_selector.xml
+++ b/MyApplication/application/src/main/res/drawable/radio_bt_selector.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
-
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/button_circle_size" />
             <solid android:color="@color/common_accent_color" />
@@ -10,7 +9,7 @@
     <item android:state_checked="false">
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/button_circle_size" />
-            <solid android:color="@color/common_disable_color" />
+            <solid android:color="@color/color_6eac5d" />
         </shape>
     </item>
 
@@ -28,8 +27,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/button_circle_size" />
             <solid android:color="@color/common_button_pressed_color" />
-        </shape>
-    </item>
+        </shape>    </item>
 
     <!-- 焦点状态 -->
     <item android:state_focused="true">
