--- a/MyApplication/application/src/main/res/drawable/vector_drawable_entertainment.xml
+++ b/MyApplication/application/src/main/res/drawable/vector_drawable_entertainment.xml
@@ -1,33 +1,19 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="48"
-    android:viewportHeight="48">
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp"
+    android:height="24dp" android:viewportWidth="48" android:viewportHeight="48">
     <path
-        android:fillColor="#b1a8c5"
-        android:pathData="M16,24C21.5228,24 26,19.5228 26,14C26,8.4771 21.5228,4 16,4C10.4772,4 6,8.4771 6,14C6,19.5228 10.4772,24 16,24Z"
-        android:strokeWidth="4"
-        android:strokeColor="#b1a8c5"
-        android:strokeLineJoin="bevel" />
+        android:pathData="M33.6961,40.8677L39,17H7L12.3039,40.8677C12.6376,42.3694 12.8045,43.1202 13.3529,43.5601C13.9013,44 14.6704,44 16.2087,44H29.7913C31.3296,44 32.0987,44 32.6471,43.5601C33.1955,43.1202 33.3624,42.3694 33.6961,40.8677Z"
+        android:strokeLineJoin="bevel" android:strokeWidth="3" android:fillColor="#00000000"
+        android:strokeColor="#b1a8c5" android:strokeLineCap="round" />
+    <path android:pathData="M27,44L28,17" android:strokeLineJoin="bevel" android:strokeWidth="3"
+        android:fillColor="#00000000" android:strokeColor="#b1a8c5" android:strokeLineCap="round" />
+    <path android:pathData="M19,44L18,17" android:strokeLineJoin="bevel" android:strokeWidth="3"
+        android:fillColor="#00000000" android:strokeColor="#b1a8c5" android:strokeLineCap="round" />
+    <path android:pathData="M31,44H15" android:strokeLineJoin="bevel" android:strokeWidth="3"
+        android:fillColor="#00000000" android:strokeColor="#b1a8c5" android:strokeLineCap="round" />
+    <path android:pathData="M31,17H15" android:strokeLineJoin="bevel" android:strokeWidth="3"
+        android:fillColor="#00000000" android:strokeColor="#b1a8c5" android:strokeLineCap="round" />
     <path
-        android:fillColor="#00000000"
-        android:pathData="M26,15.202C26.0144,15.2163 30.7229,21.1376 40.1256,32.9656C40.4562,33.363 40.4295,33.9468 40.064,34.3124L35.9805,38.3959C35.615,38.7614 35.0311,38.7881 34.6338,38.4575L17.8222,24"
-        android:strokeWidth="4"
-        android:strokeColor="#b1a8c5"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M26.4702,24.47L29.2986,27.2985"
-        android:strokeWidth="4"
-        android:strokeColor="#b1a8c5"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M17,44.0864C18.9166,41.5881 21.2468,40.3389 23.9906,40.3389C28.1063,40.3389 32.9629,45.5097 37.1063,44.798C41.2496,44.0864 42.4355,40 39.8851,37.7375"
-        android:strokeWidth="4"
-        android:strokeColor="#b1a8c5"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
+        android:pathData="M11.0004,16.9999C11.0004,16.9999 10.0004,13.9999 11.5004,12.4999C13.0004,10.9999 16.0004,11.4999 16.0004,11.4999C16.0004,11.4999 16.0004,8.4999 18.0004,7.4999C20.0004,6.4999 23.0004,7.9999 23.0004,7.9999C23.0004,7.9999 25.0004,4.6427 28.0004,5.4999C31.0004,6.3571 31.0004,9.9999 31.0004,9.9999C31.0004,9.9999 33.5004,10 35.0004,11.9999C36.5004,13.9999 35.0004,16.9999 35.0004,16.9999"
+        android:strokeLineJoin="bevel" android:strokeWidth="3" android:fillColor="#00000000"
+        android:strokeColor="#b1a8c5" android:strokeLineCap="round" />
 </vector>
