--- a/MyApplication/application/src/main/res/drawable/vector_drawable_income.xml
+++ b/MyApplication/application/src/main/res/drawable/vector_drawable_income.xml
@@ -1,21 +1,21 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp"
     android:height="24dp" android:viewportWidth="48" android:viewportHeight="48">
     <path android:pathData="M31,34L43,34" android:strokeLineJoin="round" android:strokeWidth="4"
-        android:fillColor="#00000000" android:strokeColor="#333" android:strokeLineCap="round" />
+        android:fillColor="#00000000" android:strokeColor="#fff" android:strokeLineCap="round" />
     <path
         android:pathData="M43,26V10C43,8.3432 41.6569,7 40,7H8C6.3432,7 5,8.3432 5,10V38C5,39.6569 6.3432,41 8,41H28.4706"
         android:strokeLineJoin="round" android:strokeWidth="4" android:fillColor="#00000000"
-        android:strokeColor="#333" android:strokeLineCap="round" />
+        android:strokeColor="#fff" android:strokeLineCap="round" />
     <path android:pathData="M36,39L31,34L35.9996,29" android:strokeLineJoin="round"
-        android:strokeWidth="4" android:fillColor="#00000000" android:strokeColor="#333"
+        android:strokeWidth="4" android:fillColor="#00000000" android:strokeColor="#fff"
         android:strokeLineCap="round" />
     <path android:pathData="M15,15L20,21L25,15" android:strokeLineJoin="round"
-        android:strokeWidth="4" android:fillColor="#00000000" android:strokeColor="#333"
+        android:strokeWidth="4" android:fillColor="#00000000" android:strokeColor="#fff"
         android:strokeLineCap="round" />
     <path android:pathData="M14,27H26" android:strokeLineJoin="round" android:strokeWidth="4"
-        android:fillColor="#00000000" android:strokeColor="#333" android:strokeLineCap="round" />
+        android:fillColor="#00000000" android:strokeColor="#fff" android:strokeLineCap="round" />
     <path android:pathData="M14,21H26" android:strokeLineJoin="round" android:strokeWidth="4"
-        android:fillColor="#00000000" android:strokeColor="#333" android:strokeLineCap="round" />
+        android:fillColor="#00000000" android:strokeColor="#fff" android:strokeLineCap="round" />
     <path android:pathData="M20,21V33" android:strokeLineJoin="round" android:strokeWidth="4"
-        android:fillColor="#00000000" android:strokeColor="#333" android:strokeLineCap="round" />
+        android:fillColor="#00000000" android:strokeColor="#fff" android:strokeLineCap="round" />
 </vector>
