--- a/MyApplication/application/src/main/res/drawable/vector_drawable_life.xml
+++ b/MyApplication/application/src/main/res/drawable/vector_drawable_life.xml
@@ -1,40 +1,17 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="48"
-    android:viewportHeight="48">
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp"
+    android:height="24dp" android:viewportWidth="48" android:viewportHeight="48">
     <path
-        android:fillColor="#b1a8c5"
         android:pathData="M24,44C32.8366,44 40,37.4876 40,29.4545C40,21.5758 34.6667,13.0909 24,4C13.3333,13.0909 8,21.5758 8,29.4545C8,37.4878 15.1634,44 24,44Z"
-        android:strokeWidth="4"
-        android:strokeColor="#b1a8c5"
-        android:strokeLineJoin="bevel" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M18.8572,19L24,24.3684L29.1429,19"
-        android:strokeWidth="4"
-        android:strokeColor="#FFF"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M18,26.158H30"
-        android:strokeWidth="4"
-        android:strokeColor="#FFF"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M18,31.5264H30"
-        android:strokeWidth="4"
-        android:strokeColor="#FFF"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M24,26.158V36.0001"
-        android:strokeWidth="4"
-        android:strokeColor="#FFF"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="bevel" />
+        android:strokeLineJoin="bevel" android:strokeWidth="3" android:fillColor="#00000000"
+        android:strokeColor="#b1a8c5" />
+    <path android:pathData="M18.8572,19L24,24.3684L29.1429,19" android:strokeLineJoin="bevel"
+        android:strokeWidth="3" android:fillColor="#00000000" android:strokeColor="#b1a8c5"
+        android:strokeLineCap="round" />
+    <path android:pathData="M18,26.158H30" android:strokeLineJoin="bevel" android:strokeWidth="3"
+        android:fillColor="#00000000" android:strokeColor="#b1a8c5" android:strokeLineCap="round" />
+    <path android:pathData="M18,31.5264H30" android:strokeLineJoin="bevel" android:strokeWidth="3"
+        android:fillColor="#00000000" android:strokeColor="#b1a8c5" android:strokeLineCap="round" />
+    <path android:pathData="M24,26.158V36.0001" android:strokeLineJoin="bevel"
+        android:strokeWidth="3" android:fillColor="#00000000" android:strokeColor="#b1a8c5"
+        android:strokeLineCap="round" />
 </vector>
